# paper-claw

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_current_schema.py  a1b2c3d4e5f6_add_arxiv_task_harvester.py  b2c3d4e5f6a7_expand_arxiv_task_categories.py  c9c1c108a5aa_initial_database.py  d3e4f5a6b7c8_arxiv_task_subscriptions.py  f1e2d3c4b5a6_upgrade_memories_for_deepagents.py
backend/src/backend/: schemas.py  settings.py
backend/src/backend/agents/: __init__.py  checkpointing.py  context.py  main_agent.py  memory_store.py  model.py  prompts.py  runner.py  subagents.py  tool_events.py
backend/src/backend/api/: app.py  deps.py  errors.py  serializers.py
backend/src/backend/backends/: __init__.py  sandbox.py
backend/src/backend/data/: arxiv_categories_flat.json
backend/src/backend/db/: __init__.py  base.py  engine.py  seed.py  session.py  types.py
backend/src/backend/memory/: AGENTS.md
backend/tests/: conftest.py  test_agents_factory.py  test_agents_memory_store.py  test_agents_runner.py  test_agents_tool_events.py  test_arxiv_category_data.py  test_db_engine.py  test_db_models_configuration.py  test_db_models_conversation_runtime.py  test_db_models_papers.py  test_db_models_parsing.py  test_db_models_reports_memory.py  test_db_models_search_artifacts.py  test_db_repositories.py  test_integrations_arxiv_rate_limit.py  test_integrations_openalex.py  test_services_arxiv_tasks.py  test_services_document_processing.py  test_services_embeddings_retrieval.py  test_services_papers.py  test_services_parsing.py  test_services_providers.py  test_services_reports.py  test_services_search.py  test_services_storage_acquisition.py  test_tools_paper_flow.py
backend/tests/api/: conftest.py  test_agent_api.py  test_artifact_upload_api.py  test_health_api.py  test_human_loop_api.py  test_read_models_api.py  test_tasks_api.py
(+115 files in other folders)
