[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alemax067", email = "2657236382@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.9",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
