[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alemax067", email = "2657236382@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "deepagents>=0.5.9",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
